--- a/CUDA_OPT.ipynb
+++ b/CUDA_OPT.ipynb
@@ -227,8 +227,8 @@
         "    const int grid_size = (n_float4 + block_size - 1) / block_size;\n",
         "    const int shared_mem_size = 2 * block_size * 4 * sizeof(float);\n",
         "\n",
-        "    std::cout << \"  block size: \" << block_size << \" threads\\n\";\n",
-        "    std::cout << \"  shared memory: \" << (shared_mem_size / 1024.0) << \" KB per block\\n\";\n",
+        "    std::cout << \"block size: \" << block_size << \" threads\\n\";\n",
+        "    std::cout << \"shared memory: \" << (shared_mem_size / 1024.0) << \" KB per block\\n\";\n",
         "\n",
         "    cudaEvent_t start, stop;\n",
         "    cudaEventCreate(&start);\n",
@@ -250,7 +250,7 @@
         "\n",
         "        cudaError_t err = cudaGetLastError();\n",
         "        if (err != cudaSuccess) {\n",
-        "            std::cout << \"Kernel error: \" << cudaGetErrorString(err) << std::endl;\n",
+        "            std::cout << \"kernel error: \" << cudaGetErrorString(err) << std::endl;\n",
         "            continue;\n",
         "        }\n",
         "\n",
@@ -362,8 +362,8 @@
             "\n",
             "performance measurement\n",
             "array size: 100000000(381.47 MB)\n",
-            "  block size: 256 threads\n",
-            "  shared memory: 8.00 KB per block\n",
+            " block size: 256 threads\n",
+            " shared memory: 8.00 KB per block\n",
             "\n",
             "running kernel 4 time\n",
             "\n",
